# virulign

./: .gitignore  BUILD  BUILD.txt  CMakeLists.txt  INSTALL  README.md
references/CHIKV/: CHIKV-NC004162-gp1.xml  CHIKV-NC004162-gp2.xml
references/DENV/: DENV1-NC001477.xml  DENV2-NC001474.xml  DENV3-NC001475.xml  DENV4-NC002640.xml
references/HCV/: HCV-H77.xml  HCV2-FN666429.xml  README
references/HIV/: HIV-HXB2-env.xml  HIV-HXB2-pol.xml
references/SARS-CoV-2/: E.xml  M.xml  N.xml  ORF10.xml  ORF1a.xml  ORF1ab.xml  ORF3a.xml  ORF6.xml  ORF7a.xml  ORF7b.xml  ORF8.xml  S.xml
src/: Alignment.cpp  Alignment.h  CLIUtils.cpp  CLIUtils.h  CMakeLists.txt  GenerateVersionHeader.cmake  ReferenceSequence.cpp  ReferenceSequence.h  ResultsExporter.cpp  ResultsExporter.h  Utils.cpp  Utils.h  Virulign.cpp  virulign_version.h.in
src/indicators/: CMakeLists.txt  block_progress_bar.cpp  cursor_control.cpp  cursor_movement.cpp  display_width.cpp  dynamic_progress.cpp  indeterminate_progress_bar.cpp  multi_progress.cpp  progress_bar.cpp  progress_spinner.cpp  progress_type.cpp  setting.cpp  stream_helper.cpp  termcolor.cpp  terminal_size.cpp
src/libseq/: AASequence.cpp  AASequence.h  AlignmentAlgorithm.cpp  AlignmentAlgorithm.h  AminoAcid.cpp  AminoAcid.h  CMakeLists.txt  CodingSequence.cpp  CodingSequence.h  Codon.cpp  Codon.h  CodonAlign.cpp  CodonAlign.h  NTSequence.cpp  NTSequence.h  NeedlemanWunsh.cpp  NeedlemanWunsh.h  Nucleotide.cpp  Nucleotide.h  ParseException.h
src/mxml/: CMakeLists.txt
src/mxml-utils/: CMakeLists.txt  MXMLUtils.C  MXMLUtils.h
